--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,3 @@
-/**
-* Template Name: DevFolio
-* Template URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
-* Updated: Mar 17 2024 with Bootstrap v5.3.3
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
 body {
   background-color: #f5f5f5;
   color: #4e4e4e;
@@ -836,6 +825,13 @@ a:hover {
 .about-mf .about-img img {
   margin-left: 10px;
 }
+
+.about-img img {
+  pointer-events: none;
+  user-select: none;
+  -webkit-user-drag: none;
+}
+
 
 @media (min-width: 767px) {
   .about-mf .box-pl2 {
